--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>Under Development</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Aji Sulistyo Nugroho</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Aji Sulistyo Nugroho!</h1>
+				<p>This site is under development :) More fun coming soon</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:ajisulist@gmail.com">email</a></li>
+        		<li><a href="https://github.com/ajisulit">github.com/ajisulist</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
