--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:ajisulist@gmail.com">email</a></li>
-        		<li><a href="https://github.com/ajisulit">github.com/ajisulist</a></li>
+        		<li><a href="https://github.com/ajisulist">github.com/ajisulist</a></li>
 			</ul>
 		</footer>
 	</body>
